<resources>
    <string name="app_name">ToDoListApp</string>
    <string name="add_task">Add Task</string>
    <string name="icon_add_task">Icon Add Task</string>
    <string name="to_do_list">To Do List</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="complete">Complete</string>
    <string name="due_date_title">Due Date</string>
    <string name="due_date">Due date:</string>
    <string name="date">DD/MM/YYYY</string>
</resources>