<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddTaskActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_title"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="1dp"
                android:layout_marginTop="8dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/task_title"
                    android:inputType="textCapSentences"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_description"
                android:textSize="20sp"
                android:layout_marginTop="15dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="1dp"
                android:layout_marginTop="8dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_description"
                    android:inputType="textMultiLine"
                    android:layout_marginTop="14dp"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/due_date"
                android:textSize="20sp"
                android:layout_marginTop="15dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="1dp"
                android:layout_marginTop="8dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/etDuedate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_marginTop="14dp"
                    android:drawableEnd="@drawable/ic_calendar"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>